[workspace]
members=[
	"boxdemo",
	"acdemo",
	"refcelldemo",
	"celldemo",
	"arcdemo",
	"trait_expand_demo",
	"trait_freedom",
	"trait-bound-template",
	"trait-ext-demo",
	"trait-has-not-size",
	"force-deref-call-property",
	"ptr_origin",
	"trait-sized",
	"impl_trait_copy_it_func", "closure-demo","traitRef","gameUI","gameGo"
	,"singleton","decorate","briage","state",
	"adpater","singleton2",

	"impl-repeat-trait-method",
	"node",

	"mypattern_observer",
	"mypattern_observer2_traitworker"
	,
	"multi-thread","box_self","network-server","tcp_listener","channel-muliti","self_demo"
	,"crate-test--test","threadpool","ext-lib","webserver"

]